fix mobile nav spacing

--- a/src/index.css
+++ b/src/index.css
@@ -186,17 +186,19 @@ img {
     display: table;
     padding-left: 0;
     display: flex;
-    margin-top: 10px;
-    margin-bottom:10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
 
   .nav-links.resume {
-    margin:0px;
+    margin-bottom: 2px;
+    margin-top: 2px;
   }
 
   .nav-toggle {
-    padding:0;
-    margin:0;
+    padding-left:0;
+    margin-top: 6px;
+    margin-bottom: 4px;
     display: flex;
   }
 
@@ -214,7 +216,6 @@ img {
     justify-content: end;
     flex: auto;
   }
-
 
 }
 
